fixed creatign jonbapplicaitons

--- a/backend/src/main/resources/static/createJobApplication.html
+++ b/backend/src/main/resources/static/createJobApplication.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <header>
-    <a class="site-title" href="/indexUser.html">CareerTracker</a>
+    <a class="site-title" href="/indexUser.html" id="homeLink">CareerTracker</a>
+
 </header>
 
 <main class="wide-card">
