--- a/backend/src/main/resources/static/profileUser.html
+++ b/backend/src/main/resources/static/profileUser.html
@@ -137,7 +137,7 @@
         description: document.getElementById('description').value
       };
 
-      const res = await authFetch(`/User/updateUser/${encodeURIComponent(id)}`, {
+      const res = await authFetch(`/Account/updateAccount/${encodeURIComponent(id)}`, {
         method: 'PUT',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload)
