--- a/backend/src/main/resources/static/profileUser.html
+++ b/backend/src/main/resources/static/profileUser.html
@@ -138,7 +138,7 @@
       };
 
       const res = await authFetch(`/Account/updateAccount/${encodeURIComponent(id)}`, {
-        method: 'PUT',
+        method: 'PATCH',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload)
       });
