refactord all the ids tyope from Long to UUID and change how to setup the created at of posts and applciaotns

--- a/backend/src/main/resources/static/createJobApplication.html
+++ b/backend/src/main/resources/static/createJobApplication.html
@@ -154,8 +154,8 @@
 
     try {
       const payload = {
-        postId: Number(postId),
-        userId: Number(userId),
+        postId: postId,
+        userId: userId,
         userDescription: document.getElementById("userDescription").value,
         status: "SUBMITTED",
         createdAt: new Date().toISOString()
